Submission for assignment

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -48,6 +48,7 @@ print(summary1)
 
 ```
 
+
 * Make a histogram of the total number of steps taken each day
 ```{r}
 ggplot(summary1,aes(x=Total_Steps))+geom_histogram()
@@ -86,8 +87,8 @@ Calculate and report the total number of missing values in the dataset (i.e. the
 
 *A:* Total of `r na_rows` rows have missing values in the dataset.
 
-*Q:* Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc. Create a new dataset that is equal to the original dataset but with the missing data filled in.
-*A:* We will be using the mean of the interval group.
+*Q:* Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
+*A:* We will be using the mean of the interval group to fill in the missing values..
 
 ```{r}
 new_activity<-activity%>%
